# rust-playground

./: .gitignore  README.md
adder/: Cargo.toml
adder/src/: lib.rs
adder/tests/: integration_test.rs
adder/tests/common/: mod.rs
branches/: Cargo.toml
branches/src/: main.rs
errors/: Cargo.toml
errors/src/: main.rs
functions/: Cargo.toml
functions/src/: main.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
hello_cargo/: Cargo.toml
loops/: Cargo.toml
loops/src/: main.rs
ownership/: Cargo.toml
ownership/src/: main.rs
rectangles/: Cargo.toml
rectangles/src/: main.rs
references/: Cargo.toml
references/src/: main.rs
restaurant/: Cargo.toml
restaurant/src/: lib.rs
slices/: Cargo.toml
slices/src/: main.rs
structs/: Cargo.toml
structs/src/: main.rs
variables/: Cargo.toml
variables/src/: main.rs
